styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');


html,
body {
  padding: 0;
  margin: 0;
  font-family: "Quicksand";
}
.bodyFont2{
font-family: "arial";
}
.wid{
  width: 120%;
}
.tryToCent{
  color: black;
}
a {
  color: inherit;
  text-decoration: none;
}
.scarlet{
  color: #BB0001 !important;
}
.card{
  color: black;
  display: flex;
  justify-content: center;
  align-items: center;
}
.card-body{
  padding: 2px;
}
* {
  box-sizing: border-box;
}

html,
body,
div#__next,
div#__next > div {
  height: 100%;
}

.bodyFont{
  letter-spacing: 4px;
}

.bodyFont2{
  letter-spacing: 2px;
}
.Font2{
  letter-spacing: 2px;
}
.paddingClass{

  margin-left: 10px;
}
.pixelated {
  image-rendering: pixelated;
  padding: 5px;
}

.pop-animation {
  position:relative;
}

.pop-animation:hover {
  /* Start the shake animation and make the animation last for 0.5 seconds */
  animation: shake 0.5s;

  /* When the animation is finished, start again */
  animation-iteration-count: infinite;
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}

/*https://www.30secondsofcode.org/css/s/hover-underline-animation*/
.hover-underline-animation {
  display: inline-block;
  position: relative;
}

.hover-underline-animation:after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: theme('colors.primary');
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.hover-underline-animation:hover:after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

.blur-edges-bg {
  box-shadow: 0 0 8px 8px theme('colors.background') inset;
}

